--- a/AdvancedTechTerm2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AdvancedTechTerm2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,7 +193,7 @@ ContentBrowserTab1.ZoomScale=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -212,7 +212,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=684.000
-WindowSize=X=1282.000 Y=722.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
